# unity-xr-plugin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  OpenVR-XR-Plugin-Installer.unitypackage  README.md  package.json  unity_plugin.def
.github/workflows/: build-binaries-linux.yml  build-binaries-windows.yml  build-binaries.yml  pr-checks.yml
.reuse/: dep5
Assets/: OpenVRAutoUpdater.asmdef  package.json
Assets/OpenVRAutoUpdater/Editor/: OpenVRAutoUpdater.asmdef  OpenVRAutoUpdater.cs
CommonHeaders/: CommonTypes.h  Singleton.h  UnityInterfaces.cpp  UnityInterfaces.h
CommonHeaders/OpenVR/: openvr.h  openvr_api.cs  openvr_api.json  openvr_capi.h  openvr_driver.h
CommonHeaders/ProviderInterface/: IUnityEventQueue.h  IUnityGraphics.h  IUnityGraphicsD3D11.h  IUnityGraphicsD3D12.h  IUnityGraphicsMetal.h  IUnityGraphicsVulkan.h  IUnityInterface.h  IUnityProfilerCallbacks.h  IUnityRenderingExtensions.h  IUnityShaderCompilerAccess.h  IUnityXRAudio.h  IUnityXRDisplay.h  IUnityXRDisplayShadingRateExt.h  IUnityXRInput.h  IUnityXRMeshing.h  IUnityXRPreInit.h  IUnityXRStats.h  IUnityXRTrace.h  UnitySubsystemTypes.h  UnityTypes.h  UnityXRDisplayStats.h  UnityXRSubsystemTypes.h  UnityXRTypes.h  XRMath.cpp  XRMath.h
Documentation~/: com.valve.openvr.md
Editor/: OpenVRAutoUpdater.auto  OpenVRLoaderMetadata.cs  OpenVRSettingsEditor.cs  OpenVRUpdater.cs  OpenVRUpdaterDialog.cs  Unity.XR.OpenVR.Editor.asmdef
LICENSES/: LicenseRef-Unity-Companion-License.txt
ProjectSettings/: ProjectSettings.asset
Providers/: OpenVRProviderContext.h  OpenVRSystem.cpp  OpenVRSystem.h  UserProjectSettings.cpp  UserProjectSettings.h  dllmain.cpp
Providers/Display/: Display.cpp  Display.h
Providers/Input/: Input.cpp  Input.h
Runtime/: OpenVRLoader.cs  OpenVRSettings.cs  UnitySubsystemsManifest.json  openvr_api.cs
Runtime/x64/: XRSDKOpenVR.dll.sig
Runtime/x86/: XRSDKOpenVR.dll.sig
Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
com.valve.openvr/: CHANGELOG.md  README.md  package.json
com.valve.openvr/Documentation~/: com.valvesoftware.unity.openvr.md
com.valve.openvr/Editor/: OpenVRBuildProcessor.cs  OpenVRLoaderMetadata.cs  OpenVRSettingsCopier.cs  OpenVRSettingsEditor.cs
com.valve.openvr/Runtime/: DeviceLayouts.cs  OpenVREvents.cs  OpenVRHelpers.cs  OpenVRLoader.cs  OpenVRSettings.cs  Unity.XR.OpenVR.asmdef  Unity.XR.OpenVR.asmdef.license  openvr_api.cs
com.valve.openvr/Runtime/x64/: XRSDKOpenVR.dll.sig  XRSDKOpenVR.exp  XRSDKOpenVR.ilk  XRSDKOpenVR.lib
com.valve.openvr/Runtime/x86/: XRSDKOpenVR.dll.sig  XRSDKOpenVR.exp  XRSDKOpenVR.ilk  XRSDKOpenVR.lib
lib/x64/: openvr_api.dll.sig
lib/x86/: openvr_api.dll.sig
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
